# ldk-node-wrapper

./: .gitignore  Cargo.toml  Package.swift  README.md  build.rs  rustfmt.toml  uniffi.toml
bindings/: romer.udl
bindings/kotlin/romer-jvm/lib/src/main/kotlin/org/cequals/Romer/: romer.kt
bindings/python/: pyproject.toml  setup.cfg
bindings/python/src/romer/: __init__.py  romer.py
bindings/python/src/romer.egg-info/: SOURCES.txt  top_level.txt
bindings/swift/: Package.swift
bindings/swift/RomerFFI.xcframework/: Info.plist
bindings/swift/RomerFFI.xcframework/ios-arm64/RomerFFI.framework/: Info.plist
bindings/swift/RomerFFI.xcframework/ios-arm64/RomerFFI.framework/Headers/: RomerFFI.h
bindings/swift/RomerFFI.xcframework/ios-arm64_x86_64-simulator/RomerFFI.framework/: Info.plist
bindings/swift/RomerFFI.xcframework/ios-arm64_x86_64-simulator/RomerFFI.framework/Modules/: module.modulemap
bindings/swift/RomerFFI.xcframework/macos-arm64_x86_64/RomerFFI.framework/: Info.plist
bindings/swift/RomerFFI.xcframework/macos-arm64_x86_64/RomerFFI.framework/Headers/: RomerFFI-umbrella.h
bindings/uniffi-bindgen/: Cargo.toml
scripts/: format_kotlin.sh  swift_create_xcframework_archive.sh  swift_update_package_checksum.py  uniffi_bindgen_generate_kotlin.sh  uniffi_bindgen_generate_kotlin_android.sh  uniffi_bindgen_generate_python.sh  uniffi_bindgen_generate_swift.sh
src/: error.rs  lib.rs  services.rs  token.rs  uniffi_types.rs
