[package]
name = "romer"
version = "0.1.1"
authors = ["John Cantrell <johncantrell@squareup.com>"]
homepage = "https://cequals.xyz"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A ready-to-go lightning payments solution."
repository = "https://github.com/cequals/romer.git"
readme = "README.md"
keywords = ["bitcoin", "lightning"]
categories = ["cryptography::cryptocurrencies"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "romer"


[profile.release-smaller]
inherits = "release"
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[features]
default = []

[dependencies]
ldk-node = "0.3.0"
libc = "0.2"
uniffi = { version = "0.26.0", features = ["build"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }

[build-dependencies]
uniffi = { version = "0.26.0", features = ["build"], optional = true }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"