[project]
name = "romer"
version = "0.1.0"
authors = [
  { name="John Cantrell", email="johncantrell@squareup.com" },
]
description = "A ready-to-go lightning payments solution."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://cequals.xyz/"
"Github" = "https://github.com/cequals/romer-sdk"
"Bug Tracker" = "https://github.com/cequals/romer-sdk/issues"